# aetos

./: .gitignore  Cargo.toml  demo.aetos  graphics_runner.html  install.sh  install_windows.bat  optimized.wasm  output.wasm  setup_aetos_icon.sh  simple.wasm
examples/: advanced.aetos  analog_clock.aetos  bouncing_ball.aetos  calculator.aetos  embedded_blink.aetos  fractal.aetos  hello.aetos  optimization_demo.aetos  paint.aetos  particles.aetos  pong.aetos  simple.aetos  simple_graphics.aetos  simple_test.aetos  snake_game.aetos  working_example.aetos
src/: ast.rs  graphics_engine.rs  ide.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  native_runner.rs  optimize.rs  parser.rs  stdlib.rs  typecheck.rs
src/codegen/: llvm.rs  llvm_new.rs  mod.rs  wasm.rs
src/lsp/: main.rs
src/uninstaller/: main.rs
src/visual_editor/: main.rs
tests/: codegen_tests.rs  optimize_tests.rs  typecheck_tests.rs
